duniverse/menhirLib.20200211/test/static/bad/duplicate-formal.mly
%token A
%start<unit> main

%%

foo(X,X): (* the two formal parameters have the same name *)
  X A {}

main:
  foo(A,A) {}
