duniverse/menhirLib.20200211/test/static/bad/duplicate-formal.exp
File "duplicate-formal.mly", line 6, characters 0-3:
Error: several parameters of this rule are named "X31".
